--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,19 +55,15 @@
             android:maxLines="1"
             android:hint="@string/message" />
 
-        <Button
+        <ImageButton
             android:id="@+id/sendButton"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginEnd="12dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/ic_baseline_send_24"
             android:backgroundTint="@color/colorPrimary"
-            android:enabled="false"
-            android:padding="15dp"
-
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="20sp" />
+            android:padding="15dp" />
 
     </LinearLayout>
 
