--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
+        android:layout_marginStart="8dp"
         android:backgroundTint="@color/colorPrimary"
         app:cardCornerRadius="6dp">
 
@@ -21,7 +22,6 @@
 
             <TextView
                 android:id="@+id/nameTextView"
-                android:layout_marginTop="3dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
@@ -60,15 +60,21 @@
                     android:layout_marginBottom="6dp"
                     tools:text="Message" />
 
+
+
             </androidx.cardview.widget.CardView>
 
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="4:44 AM"
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                android:layout_gravity="end"
+                android:layout_marginEnd="3dp" />
 
         </LinearLayout>
-
-
-
-
-
     </androidx.cardview.widget.CardView>
 
 
