--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -11,7 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="@color/colorPrimary"
         app:cardCornerRadius="6dp">
 
@@ -22,7 +23,6 @@
 
             <TextView
                 android:id="@+id/nameTextView"
-                android:layout_marginTop="3dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
@@ -63,10 +63,17 @@
 
             </androidx.cardview.widget.CardView>
 
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="4:44 AM"
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                android:layout_gravity="end"
+                android:layout_marginEnd="3dp" />
 
         </LinearLayout>
-
-
 
 
 
