--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="6dp"
+    android:padding="5dp"
+    android:layout_marginEnd="80dp"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
