--- a/app/src/main/res/layout/activity_all_users.xml
+++ b/app/src/main/res/layout/activity_all_users.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AllUsers"
+    tools:context=".Activities.AllUsers"
     android:background="@color/colorPrimaryDark"
     android:orientation="vertical">
 
