--- a/app/src/main/res/layout/activity_person_to_person_chat.xml
+++ b/app/src/main/res/layout/activity_person_to_person_chat.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context="com.example.chatengine.MainActivity">
+    tools:context="com.example.chatengine.Activities.MainActivity">
 
 
     <ProgressBar
