UI Changed & New functionality added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,19 +5,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/white"
     tools:context="com.example.chatengine.Activities.MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintVertical_weight="1"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_weight="1" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -27,6 +29,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="0dp">
 
@@ -49,7 +52,7 @@
             android:background="@drawable/edit_fields"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textColorHint="@color/colorPrimary"
             android:inputType="text"
             android:maxLines="1"
