--- a/app/src/main/res/drawable/edit_fields.xml
+++ b/app/src/main/res/drawable/edit_fields.xml
@@ -2,9 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <size android:height="40dp"
-        android:width="210dp"/>
-    <stroke android:width="1.5dp"
-        android:color="@color/colorPrimary"/>
+        android:width="40dp"/>
+    <solid android:color="@color/colorPrimary"/>
     <corners android:radius="50dp"/>
 
 </shape>
