--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,9 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
     tools:context="com.example.chatengine.Activities.Login">
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,62 +18,61 @@
             android:layout_height="wrap_content"
             android:indeterminate="true"
             android:visibility="invisible"
-            android:indeterminateTint="@color/colorPrimary"
-            />
-
+            android:indeterminateTint="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/loginscrn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            android:layout_marginStart="40dp"
-            android:text="@string/welcome"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/hello_there"
             android:textColor="@color/colorPrimary"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/txtEmail"
-            android:layout_width="250dp"
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:id="@+id/EmailField"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="120dp"
-            android:hint="@string/email"
-            android:textColor="@color/white"
-            android:textColorHint="@color/colorPrimary"
-            android:background="@drawable/edit_fields"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:maxLines="1"
             android:layout_gravity="center_horizontal"
-            android:ems="10"/>
+            android:layout_marginTop="40dp"
+            android:hint="@string/email">
 
-        <EditText
-            android:id="@+id/txtPwd"
-            android:layout_width="250dp"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txtEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:id="@+id/PassField"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:hint="@string/password"
-            android:textColor="@color/white"
-            android:background="@drawable/edit_fields"
-            android:paddingStart="20dp"
-            android:maxLines="1"
-            android:paddingEnd="20dp"
             android:layout_gravity="center_horizontal"
-            android:textColorHint="@color/colorPrimary"
-            android:inputType="textPassword"
-            android:ems="10" />
+            android:layout_marginTop="20dp"
+            android:hint="@string/password">
 
-        <Button
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txtPwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textColor="@color/black" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/btnLogin"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/edit_fields"
-            android:backgroundTint="@color/colorPrimary"
             android:text="@string/login"
-            android:textColor="@color/black"/>
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"/>
 
 
         <TextView android:id="@+id/lnkRegister"
@@ -85,12 +82,8 @@
             android:text="@string/new_here_register"
             android:layout_gravity="center"
             android:textSize="20sp"
-            android:textColor="@color/white" />
-
-
+            android:textColor="@color/black" />
 
     </LinearLayout>
-
-
 
 </RelativeLayout>
