--- a/app/src/main/res/layout/activity_person_to_person_chat.xml
+++ b/app/src/main/res/layout/activity_person_to_person_chat.xml
@@ -5,8 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
-    tools:context="com.example.chatengine.Activities.MainActivity">
+    android:background="@color/white"
+    tools:context="com.example.chatengine.Activities.PersonToPersonChat">
 
 
     <ProgressBar
@@ -28,7 +28,7 @@
         android:id="@+id/personchatrecyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -65,25 +65,21 @@
             android:background="@drawable/edit_fields"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textColorHint="@color/colorPrimary"
             android:inputType="text"
             android:maxLines="1"
             android:hint="@string/message" />
 
-        <Button
+        <ImageButton
             android:id="@+id/sendButton"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginEnd="12dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/ic_baseline_send_24"
             android:backgroundTint="@color/colorPrimary"
-            android:enabled="false"
-            android:padding="15dp"
-
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="20sp" />
+            android:padding="15dp" />
 
     </LinearLayout>
 
