--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,8 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    tools:context="com.example.chatengine.Activities.Login">
+    tools:context="com.example.chatengine.Activities.Register">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,80 +25,90 @@
             android:id="@+id/loginscrn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:layout_marginStart="40dp"
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center_horizontal"
             android:text="@string/welcome"
             android:textColor="@color/colorPrimary"
             android:textSize="25sp"
             android:textStyle="bold" />
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:background="@drawable/add_a_photo"
+            android:id="@+id/userProfilePic"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="25dp" />
 
-        <EditText
-            android:id="@+id/txtName"
-            android:layout_width="250dp"
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:id="@+id/NameField"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="120dp"
-            android:hint="@string/full_name"
-            android:textColor="@color/white"
-            android:textColorHint="@color/colorPrimary"
-            android:background="@drawable/edit_fields"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:maxLines="1"
-            android:ems="10"/>
+            android:layout_marginTop="40dp"
+            android:hint="@string/username">
 
-        <EditText
-            android:id="@+id/txtEmail"
-            android:layout_width="250dp"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/RtxtName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:id="@+id/EmailField"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:hint="@string/email"
-            android:textColor="@color/white"
-            android:textColorHint="@color/colorPrimary"
-            android:background="@drawable/edit_fields"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:ems="10"
-            android:maxLines="1"/>
+            android:layout_marginTop="20dp"
+            android:hint="@string/email">
 
-        <EditText
-            android:id="@+id/txtPwd"
-            android:layout_width="250dp"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/RtxtEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:id="@+id/PassField"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:hint="@string/password"
-            android:textColor="@color/white"
-            android:background="@drawable/edit_fields"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:textColorHint="@color/colorPrimary"
-            android:inputType="textPassword"
-            android:maxLines="1"
-            android:ems="10" />
+            android:layout_marginTop="20dp"
+            android:hint="@string/password">
 
-        <Button
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/RtxtPwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textColor="@color/black" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/btnRegistor"
-            android:layout_width="110dp"
-            android:layout_height="wrap_content"
+            android:text="@string/update"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/edit_fields"
-            android:backgroundTint="@color/colorPrimary"
-            android:text="@string/registorr"
-            android:textColor="@color/black"/>
+            android:layout_marginTop="20dp"/>
 
 
         <TextView android:id="@+id/lnkLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:text="@string/already_registered_login_here"
             android:layout_gravity="center|bottom"
             android:textSize="20sp"
-            android:textColor="@color/white" />
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
