--- a/app/src/main/res/layout/alluser_singleraw.xml
+++ b/app/src/main/res/layout/alluser_singleraw.xml
@@ -1,63 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardview"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:cardCornerRadius="6dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginTop="6dp"
-        android:backgroundTint="@color/colorPrimaryDark">
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:orientation="vertical">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/userimage"
+            android:src="@drawable/night"
             android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/person"/>
+            android:layout_height="60dp"
+            android:layout_gravity="center_horizontal" />
 
 
         <TextView
             android:id="@+id/username"
-            android:layout_width="wrap_content"
+            style="@style/autoscroll"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="Users"
-            android:textColor="@color/white"
-            android:textSize="22sp"
-            android:layout_marginStart="75dp"
-            android:layout_gravity="center_vertical"/>
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:text="Poojan Prajapati"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:paddingHorizontal="6dp"
+            />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.2dp"
-            android:layout_gravity="bottom|end"
-            android:background="@color/white" />
+    </LinearLayout>
 
-        <TextView
-            android:id="@+id/mesgcount"
-            android:layout_width="27dp"
-            android:layout_height="27dp"
-            android:layout_gravity="end|center_vertical"
-            android:background="@drawable/button_back"
-            android:gravity="center"
-            android:text="5"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="18dp"/>
-
-
-    </androidx.cardview.widget.CardView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
