--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="5dp"
+    android:paddingBottom="5dp"
     android:layout_marginEnd="80dp"
     android:orientation="vertical">
 
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:layout_marginStart="8dp"
-        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTint="@color/colorPrimaryDark"
         app:cardCornerRadius="6dp">
 
         <LinearLayout
@@ -32,13 +32,13 @@
                 android:textStyle="bold"
                 tools:text="Name" />
 
-            <!--            <View-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="1dp"-->
-            <!--                android:layout_marginTop="5dp"-->
-            <!--                android:layout_marginStart="10dp"-->
-            <!--                android:layout_marginEnd="10dp"-->
-            <!--                android:background="@color/colorPrimaryDark"/>-->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:background="@color/white"/>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
@@ -49,33 +49,39 @@
                 app:cardCornerRadius="6dp"
                 android:backgroundTint="@color/colorPrimaryDark">
 
-                <TextView
-                    android:id="@+id/messageTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="15sp"
-                    android:layout_marginEnd="15sp"
-                    android:textSize="20sp"
-                    android:gravity="center_vertical"
-                    android:textColor="@color/colorPrimary"
-                    android:layout_marginBottom="6dp"
-                    tools:text="Message" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
+                    <TextView
+                        android:id="@+id/messageTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="15sp"
+                        android:layout_marginEnd="15sp"
+                        android:textSize="20sp"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/white"
+                        android:layout_marginBottom="6dp"
+                        tools:text="Message" />
 
+                    <TextView
+                        android:id="@+id/date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="4:44 AM"
+                        android:textColor="@color/white"
+                        android:textSize="10sp"
+                        android:layout_gravity="end|bottom"
+                        android:layout_marginEnd="3dp" />
+
+                </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="4:44 AM"
-                android:textColor="@color/white"
-                android:textSize="10sp"
-                android:layout_gravity="end"
-                android:layout_marginEnd="3dp" />
-
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
 
