--- a/app/src/main/res/layout/ptop_chat_left.xml
+++ b/app/src/main/res/layout/ptop_chat_left.xml
@@ -4,42 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="5dp"
-    android:layout_marginStart="80dp"
+    android:paddingTop="5dp"
+    android:layout_marginEnd="80dp"
     android:orientation="vertical">
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="@color/colorPrimary"
-        app:cardCornerRadius="6dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/nameTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textSize="14sp"
-                android:layout_marginStart="8sp"
-                android:layout_marginEnd="15sp"
-                android:textStyle="bold"
-                tools:text="Name" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:background="@color/white"/>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
@@ -48,7 +20,7 @@
                 android:layout_marginEnd="3dp"
                 android:layout_marginBottom="3dp"
                 app:cardCornerRadius="6dp"
-                android:backgroundTint="@color/colorPrimary">
+                android:backgroundTint="@color/colorPrimaryDark">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -61,6 +33,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15sp"
                         android:layout_marginEnd="15sp"
+                        android:layout_marginTop="6dp"
                         android:textSize="20sp"
                         android:gravity="center_vertical"
                         android:textColor="@color/white"
@@ -79,20 +52,8 @@
 
                 </LinearLayout>
 
-
-
             </androidx.cardview.widget.CardView>
 
-
         </LinearLayout>
-
-
-
-    </androidx.cardview.widget.CardView>
-
-
-
-
-
 
 </RelativeLayout>
