--- a/app/src/main/res/layout/ptop_chat_right.xml
+++ b/app/src/main/res/layout/ptop_chat_right.xml
@@ -4,42 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="5dp"
+    android:paddingTop="5dp"
     android:layout_marginStart="80dp"
     android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="@color/colorPrimary"
-        app:cardCornerRadius="6dp">
 
         <LinearLayout
+            android:layout_alignParentEnd="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/nameTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textSize="14sp"
-                android:layout_marginStart="8sp"
-                android:layout_marginEnd="15sp"
-                android:textStyle="bold"
-                tools:text="Name" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:background="@color/white"/>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
@@ -61,6 +36,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15sp"
                         android:layout_marginEnd="15sp"
+                        android:layout_marginTop="6dp"
                         android:textSize="20sp"
                         android:gravity="center_vertical"
                         android:textColor="@color/white"
@@ -85,14 +61,6 @@
 
 
         </LinearLayout>
-
-
-
-    </androidx.cardview.widget.CardView>
-
-
-
-
 
 
 </RelativeLayout>
